added the decoration of the skewed div on top of the navbar decoration on the about page, but it needs to be placed on a lower z index because it extends onto the rest of the page which does not look good

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -22,10 +22,12 @@
     overflow: visible;
 }
 #aboutSkewedDov{
-    background-color: green;
+    background-color: white;
     width: 100vw;
-    height: 5vw;
-    margin-top: 0;
+    height: 5.3vw;
+    border: black solid;
+    margin-bottom: 1vh;
     overflow: visible;
     position: absolute;
+    transform: skew(20deg, 10.2deg);
 }
