--- a/src/components/About.css
+++ b/src/components/About.css
@@ -20,6 +20,7 @@
     top: 0;
     height: 12vh;
     overflow: visible;
+    z-index: -5;
 }
 #aboutSkewedDov{
     background-color: white;
@@ -30,4 +31,5 @@
     overflow: visible;
     position: absolute;
     transform: skew(20deg, 10.2deg);
+    z-index: 199;
 }
