placed a div directly underneath the skewed header to hide the overflow since it is on a higher z index. It looks great

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -33,3 +33,12 @@
     transform: skew(20deg, 10.2deg);
     z-index: 199;
 }
+#aboutHeader{
+    background-color: white;
+    width: 100vw;
+    height: 20vh;
+    z-index: 205;
+    position: absolute;
+
+
+}
