--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
+
 .aboutPage{
     height: 100vh;
     width: 100vw;
@@ -35,10 +38,13 @@
 }
 #aboutHeader{
     background-color: white;
+    border: solid black 2px;
+    text-align: center;
     width: 100vw;
     height: 20vh;
     z-index: 205;
     position: absolute;
+    font-family: 'Permanent Marker', cursive;
 
 
 }
