added a nice light blue themed color to the about header font and an underline text decoration that is orange

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -43,8 +43,9 @@
     width: 100vw;
     height: 20vh;
     z-index: 205;
+    color: rgb(134, 193, 212);
     position: absolute;
     font-family: 'Permanent Marker', cursive;
-
-
+    font-size: 20px;
+    text-decoration: underline orange;
 }
