changed the text div to absolute because it was being covered by the skewed div and I spent about ten minutes truing to figure out why

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -49,3 +49,12 @@
     font-size: 40px;
     text-decoration: underline orange;
 }
+
+#aboutParagraph{
+    width: 100vw;
+    height: 30vh;
+    background-color: green;
+    z-index: 205;
+    position: absolute;
+    top: 22.5vh;
+}
