--- a/src/components/About.css
+++ b/src/components/About.css
@@ -83,5 +83,30 @@
     position: absolute;
     z-index: 205;
     top: 2vh;
-    left: 1vw;
+    left: 2vw;
+}
+
+.skillsColumnOne{
+    border: solid black 2px;
+    width: 45vw;
+    display: flex;
+    flex-wrap: nowrap;
+    height: 15vh;
+    position: absolute;
+    z-index: 205;
+    top: 2vh;
+    left: 33vw;
+}
+
+.skillsColumnTwo{
+    border: solid black 2px;
+    width: 45vw;
+    display: flex;
+    flex-wrap: nowrap;
+    height: 15vh;
+    position: absolute;
+    z-index: 205;
+    top: 20vh;
+    left: 33vw;
+
 }
