--- a/src/components/About.css
+++ b/src/components/About.css
@@ -71,6 +71,10 @@
     width: 100vw;
     height: 40vh;
     position: absolute;
+    font-family: 'Permanent Marker', cursive;
+    text-align: center;
+    font-size: 90px;
+    color: rgb(249, 140, 31);
     top: 35vh;
     z-index: 205;
     background-color: rgb(134, 193, 212);
