--- a/src/components/About.css
+++ b/src/components/About.css
@@ -118,7 +118,7 @@
 #htmlIcon{
     background-image: url('../html-5.png');
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     height: 90px;
     width: 100px;
     margin-top: 5px;
@@ -126,8 +126,9 @@
 
 #cssIcon{
     background-image: url('../css.png');
-    background-position: contain;
-    background-size: cover;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
     height: 90px;
     width: 80px;
     margin-top: 5px;
@@ -135,8 +136,9 @@
 
 #javascriptIcon{
     background-image: url('../javscript.jpg');
-    background-position: contain;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 90px;
     width: 80px;
     margin-top: 5px;
@@ -144,8 +146,9 @@
 
 #reactIcon{
     background-image: url('../react.png');
-    background-position: contain;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 90px;
     width: 80px;
     margin-top: 5px;
@@ -153,8 +156,9 @@
 
 #nodeIcon{
     background-image: url('../node.png');
-    background-position: contain;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 90px;
     width: 80px;
     margin-top: 5px;
@@ -162,8 +166,9 @@
 
 #expressIcon{
     background-image: url('../express.png');
-    background-position: contain;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 90px;
     width: 80px;
     margin-top: 5px;
@@ -171,8 +176,9 @@
 
 #sqliteIcon{
     background-image: url('../sqlite.png');
-    background-position: contain;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 90px;
     width: 80px;
     margin-top: 5px;  
@@ -180,8 +186,9 @@
 
 #postgresIcon{
     background-image: url('../postgres.jpg');
-    background-position: contain;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 90px;
     width: 80px;
     margin-top: 5px;
