--- a/src/components/About.css
+++ b/src/components/About.css
@@ -122,7 +122,7 @@
 }
 
 #cssIcon{
-    background-image: url('../css.png');
+    background-image: url('../transparentCss.png');
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -132,17 +132,17 @@
 }
 
 #javascriptIcon{
-    background-image: url('../javscript.jpg');
+    background-image: url('../logo-javascript-logo-png-transparent.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    height: 90px;
-    width: 80px;
+    height: 120px;
+    width: 100px;
     margin-top: 5px;
 }
 
 #reactIcon{
-    background-image: url('../react.png');
+    background-image: url('../transparentReactLogo.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
