--- a/src/components/About.css
+++ b/src/components/About.css
@@ -136,9 +136,9 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    height: 120px;
-    width: 100px;
-    margin-top: 5px;
+    height: 100px;
+    width: 60px;
+    margin-top: 1px;
 }
 
 #reactIcon{
@@ -152,7 +152,7 @@
 }
 
 #nodeIcon{
-    background-image: url('../node.png');
+    background-image: url('../nodejs-1-logo-png-transparent.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
