added postgresql logo

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -172,7 +172,7 @@
 }
 
 #sqliteIcon{
-    background-image: url('../sqlite.png');
+    background-image: url('../transparentsqlite-logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -182,7 +182,7 @@
 }
 
 #postgresIcon{
-    background-image: url('../postgres.jpg');
+    background-image: url('../PostgreSQL_logo_Postgre_SQL.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
