--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -7,3 +7,13 @@ border: solid 2px black;
 #cardTitle{
     text-align: center;
 }
+
+#cardTop{
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    height: 20vh;
+    width: 30vw;
+    border: solid 2px black;
+
+}
