--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -14,8 +14,9 @@ border: solid 2px black;
 #cardTop{
     text-align: center;
     position: relative;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+    margin-top: 2vh;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
     height: 20vh;
     width: 20vw;
     border: solid 2px black;
