--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -38,10 +38,11 @@
 #cardsDiv{
     margin-left: 8vw;
     position: absolute;
-    height: 70vh;
+    height: 72vh;
     width: 87vw;
     display: inline-flex;
     flex-direction: row;
+    border: solid black 2px;
 }
 
 #projectsBackground{
@@ -49,13 +50,4 @@
     background-color: rgb(233, 231, 231);
     width: 100%;
     height: 100%;
-}
-
-#infoAboutProjectsSection{
-    background-color: indianred;
-    width: 40vw;
-    height: 40vh;
-    overflow-y: scroll;
-    position: relative;
-    margin-top: 40vh;
 }
