--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Karantina:wght@300;700&family=Zen+Dots&display=swap');
+
 
 #fullPagePic{
     background-image: url('../weightliftingPic\ \(1\).jpg');
