--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -66,7 +66,6 @@
 }
 
 #challengesIcons{
-z-index: 22;
 height: 7vh;
 display: inline-flex;
 flex-direction: row;
@@ -77,5 +76,8 @@ border: black 2px solid;
 }
 
 .challengeIcon{
-
+height: 3vh;
+width: 5vw;
+border-radius: 50%;
+background-color: rgb(249, 140, 31);
 }
