--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -51,7 +51,7 @@
 
 #challengesFooter{
     z-index: 22;
-    height: 20vh;
+    height: 24vh;
     width: 90vw;
     display: flex;
     flex-direction: column;
@@ -66,18 +66,31 @@
 }
 
 #challengesIcons{
-height: 7vh;
+height: 11vh;
 display: inline-flex;
 flex-direction: row;
 width: 80vw;
 color: rgb(249, 140, 31);
-margin-top: 2vh;
-border: black 2px solid;
+margin-top: 1vh;
 }
 
 .challengeIcon{
-height: 3vh;
+height: 7vh;
 width: 5vw;
 border-radius: 50%;
+padding: 10px 3px;
+border: dotted white 2.1px;
 background-color: rgb(249, 140, 31);
+}
+
+#challengesNames{
+    display: flex;
+    flex-direction: row;
+}
+
+.challengeName{
+    height: 2vh;
+    width: 4vw;
+    border: solid white 2px;
+    margin-left: 5px;
 }
