solved a huge problem that took about two days to resolve.... I managed to make the challenge icon make my alogorithm code appear iin the title description div, this was a very difficult issue to figure out but I did so by creating another div and just placing it on a hight z index set to hidden, and making it appear onclick

--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -35,6 +35,24 @@
     border-bottom: white 2px solid;
 }
 
+#arrayBuilder{
+    z-index: 23;
+    text-align: center;
+    height: 51.5vh;
+    width: 37vw;
+    position: absolute;
+    visibility: hidden;
+    margin-left: 35vw;
+    background-image: url('../arrayBuilder.png');
+    background-size: contain;
+    overflow: scroll;
+    font-size: 23px;
+    color: white;
+    font-weight: bolder;
+    margin-top: 9vw;
+    font-family: 'Karantina', cursive;
+}
+
 #titleDescription{
     z-index: 22;
     text-align: center;
