--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -4,7 +4,7 @@
 
 
 #fullPagePic{
-    background-image: url('../weightliftingPic\ \(1\).jpg');
+    background-image: url('../benchpressPic.jpg');
     background-position: center;
     background-size: cover;
     height: 100vh;
