changed the jpg to a png

--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -4,7 +4,7 @@
 
 
 #fullPagePic{
-    background-image: url('../benchpressPic.jpg');
+    background-image: url('../benchpressPic.png');
     background-position: center;
     background-size: cover;
     height: 100vh;
