--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -4,7 +4,7 @@
 
 
 #fullPagePic{
-    background-image: url('../benchpressPic.png');
+    background-image: url('../benchpressPic.jpg');
     background-position: center;
     background-size: cover;
     height: 100vh;
@@ -14,7 +14,7 @@
 }
 
 #blueOverlay{
-    background-color: rgb(0, 34, 102);
+    background-color: green;
     height: 100vh;
     width: 100vw;  
     z-index: 19;
