--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -10,14 +10,14 @@
     height: 100vh;
     width: 100vw;
     opacity: 97%;
-    z-index: 20;
+    z-index: 23;
 }
 
 #blueOverlay{
-    background-color: green;
+    background-color: rgb(0, 34, 102);
     height: 100vh;
     width: 100vw;  
-    z-index: 19;
+    z-index: 22;
     opacity: 80%;
 }
 
