--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -7,10 +7,14 @@
     background-image: url('../benchpressPic.jpg');
     background-position: center;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     height: 100vh;
     width: 100vw;
     opacity: 97%;
     z-index: 23;
+    visibility: visible;
 }
 
 #blueOverlay{
