--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -4,7 +4,7 @@
 
 
 #fullPagePic{
-    background-image: url('../benchpressPic.jpg');
+    background-image: url('../strangthChallengePic.jpg');
     background-position: center;
     background-size: cover;
     -webkit-background-size: cover;
@@ -14,7 +14,6 @@
     width: 100vw;
     opacity: 97%;
     z-index: 23;
-    visibility: visible;
 }
 
 #blueOverlay{
