--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -4,7 +4,7 @@
 
 
 #fullPagePic{
-    background-image: url('../strangthChallengePic.jpg');
+    background-image: url('../benchpressPic.png');
     background-position: center;
     background-size: cover;
     -webkit-background-size: cover;
@@ -13,14 +13,14 @@
     height: 100vh;
     width: 100vw;
     opacity: 97%;
-    z-index: 23;
+    z-index: 20;
 }
 
 #blueOverlay{
     background-color: rgb(0, 34, 102);
     height: 100vh;
     width: 100vw;  
-    z-index: 22;
+    z-index: 19;
     opacity: 80%;
 }
 
