--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -4,7 +4,7 @@
 
 
 #fullPagePic{
-    background-image: url('../benchpressPic.png');
+    background-image: url('../quickShowScreenshot.png');
     background-position: center;
     background-size: cover;
     -webkit-background-size: cover;
