--- a/src/components/Journal.css
+++ b/src/components/Journal.css
@@ -10,6 +10,6 @@
     margin-top: 11vh;
     height: 33vh;
     width: 75vw;
-    background-color: gold;
+    background-color: rgb(0, 34, 102);
     color: green;
 }
