--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -6,10 +6,7 @@
 #fullPagePic{
     background-image: url("../benchpressPic.png");
     background-position: center;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-size: 100%;
     height: 100vh;
     width: 100vw;
     opacity: 97%;
