--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -4,7 +4,7 @@
 
 
 #fullPagePic{
-    background-image: url("../strangthChallengePic.jpg");
+    background-image: url("../benchpressPic.png");
     background-position: center;
     background-size: 100%;
     height: 100vh;
