--- a/src/components/Journal.css
+++ b/src/components/Journal.css
@@ -12,13 +12,28 @@
 
 .entryDiv{
     margin-top: 11vh;
+    border-radius: 9px;
     height: 33vh;
     width: 75vw;
     background-color: rgb(0, 34, 102);
     color: green;
     text-align: center;
     font-family: 'Karantina', cursive;
+    font-family: 'Indie Flower', cursive;
+
     font-size: 35px;
     color: orange;
     letter-spacing: .2rem;
+}
+
+#actualEntry{
+    background-color: rgb(0, 34, 102);
+}
+
+#datediv{
+    color: rgb(134, 193, 212);
+    font-family: 'Indie Flower', cursive;
+    font-family: 'Karantina', cursive;
+    border-top: white solid 2px;
+    width: 40vw;
 }
