added a white container that I will use to make the logo more readable and skew

--- a/src/components/Lamb.css
+++ b/src/components/Lamb.css
@@ -16,6 +16,13 @@
     height: 100vh;
 }
 
+#topSkewedDiv{
+    height: 20vh;
+    width: 30vw;
+    background-color: white;
+    
+}
+
 #rightPicSide{
     display:inline-flex;
     background-image: url('../lambPic.jpeg');
