--- a/src/components/Lamb.css
+++ b/src/components/Lamb.css
@@ -25,12 +25,17 @@
     margin-top: 12vh;
     margin-left: 14vw;
     font-size: 35px;
+    color: #062f55;
     text-align: center;
+    border-bottom: white 1px solid;
+    border-bottom-width: .2vw;
 }
 
 #topSkewedDiv{
     height: 9.5vh;
-    width: 22vw;
+    width: 23vw;
+    border-top-right-radius: 40px;
+    border-bottom-right-radius: 40px;
     margin-left: 9.5vw;
     background-color: #062f55;
     transform: skew(66deg, 4deg) rotate(20deg, 40deg);
