added text required for three of the challenges descriptions

--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -9,6 +9,7 @@
     background-size: 100%;
     height: 100vh;
     width: 100vw;
+    display: transparent;
    /* opacity: 97%;*/
     z-index: 24;
 }
