--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -46,7 +46,7 @@
 
 #projectsBackground{
     z-index: -1;
-    background-color: rgb(233, 231, 231);
+    background-color: white;
     width: 100%;
     height: 100%;
 }
