added comments for clear explanation of what is going on in the challenges component because it was very convuluted, also added some spacing for readability

--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -64,6 +64,9 @@
     margin-left: 35vw;
     background-color: rgb(0, 34, 102);
     overflow: scroll;
+    border-left: solid 1px orange;
+    border-bottom: solid 1px orange;
+    border-right: solid 1px orange;
     font-size: 23px;
     color: white;
     font-weight: bolder;
