added the description div for the intersection challenge, also fixed a nasty typo that was on all of the classes and css rules

--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -54,7 +54,7 @@
     font-family: 'Karantina', cursive;
 }
 
-#arrayBuilderDescrition{
+#arrayBuilderDescription{
     z-index: 23;
     text-align: center;
     height: 51.5vh;
@@ -74,7 +74,7 @@
     font-family: 'Karantina', cursive;
 }
 
-#prioritizeDescrition{
+#prioritizeDescription{
     z-index: 23;
     text-align: center;
     height: 51.5vh;
@@ -94,7 +94,7 @@
     font-family: 'Karantina', cursive;
 }
 
-#intersectionDescrition{
+#intersectionDescription{
     z-index: 23;
     text-align: center;
     height: 51.5vh;
