--- a/src/components/Challenges.css
+++ b/src/components/Challenges.css
@@ -60,12 +60,11 @@
     height: 51.5vh;
     width: 37vw;
     position: absolute;
-    visibility: visible;
+    visibility: hidden;
     margin-left: 35vw;
     background-color: rgb(0, 34, 102);
     overflow: scroll;
     border-left: solid 1px orange;
-    border-bottom: solid 1px orange;
     border-right: solid 1px orange;
     font-size: 23px;
     color: white;
@@ -80,12 +79,11 @@
     height: 51.5vh;
     width: 37vw;
     position: absolute;
-    visibility: visible;
+    visibility: hidden;
     margin-left: 35vw;
     background-color: rgb(0, 34, 102);
     overflow: scroll;
     border-left: solid 1px orange;
-    border-bottom: solid 1px orange;
     border-right: solid 1px orange;
     font-size: 23px;
     color: white;
@@ -100,12 +98,11 @@
     height: 51.5vh;
     width: 37vw;
     position: absolute;
-    visibility: visible;
+    visibility: hidden;
     margin-left: 35vw;
     background-color: rgb(0, 34, 102);
     overflow: scroll;
     border-left: solid 1px orange;
-    border-bottom: solid 1px orange;
     border-right: solid 1px orange;
     font-size: 23px;
     color: white;
@@ -120,12 +117,11 @@
     height: 51.5vh;
     width: 37vw;
     position: absolute;
-    visibility: visible;
+    visibility: hidden;
     margin-left: 35vw;
     background-color: rgb(0, 34, 102);
     overflow: scroll;
     border-left: solid 1px orange;
-    border-bottom: solid 1px orange;
     border-right: solid 1px orange;
     font-size: 23px;
     color: white;
